# edc-review-dashboard

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.tests.txt  runtests.py  setup.cfg  setup.py  tox.ini
dashboard_app/: admin.py  admin_site.py  apps.py  consents.py  lab_profiles.py  models.py  reference_configs.py  urls.py  views.py  visit_schedule.py
dashboard_app/templates/: home.html
edc_review_dashboard/: apps.py  auth_objects.py  auths.py  dashboard_templates.py  middleware.py  models.py  navbars.py  system_checks.py  urls.py
edc_review_dashboard/migrations/: 0001_initial.py  0002_auto_20220825_0451.py  0003_alter_edcpermissions_device_created_and_more.py  0004_edcpermissions_locale_created_and_more.py
edc_review_dashboard/model_wrappers/: __init__.py  subject_visit_model_wrapper.py
edc_review_dashboard/templates/bootstrap3/: subject_review_listboard.html
edc_review_dashboard/tests/: __init__.py  admin.py  consents.py  holidays.csv  lab_profiles.py  models.py  reference_configs.py  test_settings.py  urls.py  views.py  visit_schedule.py
edc_review_dashboard/view_mixins/: __init__.py  subject_review_listboard_mixin.py
edc_review_dashboard/views/: __init__.py  edc_subject_review_listboard_view.py  subject_review_listboard.py  subject_review_listboard_view.py
review_dashboard_app/: admin.py  admin_site.py  apps.py  consents.py  lab_profiles.py  models.py  navbars.py  reference_configs.py  urls.py  views.py  visit_schedule.py
review_dashboard_app/templates/: home.html
(+17 files in other folders)
