[metadata]
name = edc-review-dashboard
version = attr: _version
author = Erik van Widenfelt
author_email = ew2789@gmail.com
url = https://github.com/clinicedc/edc-review-dashboard
license = GPL license, see LICENSE
description = A dashboard with direct links to review a subject's CRFs and Requisitions in clinicedc/edc projects
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = django edc dashboard, clinicedc, clinical trials
classifiers=
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
python_requires = >=3.9
zip_safe = False
include_package_data = True
packages = find:

[options.extras_require]
test =
    django_webtest

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    bin*
    edc_review_dashboard.tests*

[flake8]
ignore = E226,W503,E203
max-line-length = 95
max-complexity = 10
exclude = */migrations/*,.tox,.git,__pycache__,build,dist,.eggs
per-file-ignores = __init__.py: F401
